--- a/client/src/assets/style.scss
+++ b/client/src/assets/style.scss
@@ -125,6 +125,7 @@ body{
     .guess--picture{
       text-align: center; 
       img{
+        cursor: pointer;
         width: 100%;
         max-width: 500px;
         border-radius: 10px;
